--- a/Vec.cabal
+++ b/Vec.cabal
@@ -15,8 +15,9 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Vec
-                     , Nat
+  exposed-modules:     VecLit
+                     -- , Nat
+                     -- , Vec
                      , Unfoldable
   build-depends:       base >= 4.7 && < 5
                      , ghc-typelits-natnormalise
@@ -36,6 +37,7 @@ test-suite Vec-test
   main-is:             Spec.hs
   build-depends:       base
                      , Vec
+                     , hspec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
